replace project name

--- a/app/desktop/macos/Runner/Configs/AppInfo.xcconfig
+++ b/app/desktop/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = zoidberg
+PRODUCT_NAME = ahouefa
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = workker.zoidberg
+PRODUCT_BUNDLE_IDENTIFIER = workker.ahouefa
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 workker. All rights reserved.
