--- a/app/api/pyproject.toml
+++ b/app/api/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "python-multipart>=0.0.20",
     "starlette>=0.46.2",
     "uvicorn>=0.34.2",
 ]
