--- a/app/desktop/linux/CMakeLists.txt
+++ b/app/desktop/linux/CMakeLists.txt
@@ -4,10 +4,10 @@ project(runner LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "ahouefa")
+set(BINARY_NAME "t_dev_800_app")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "workker.ahouefa")
+set(APPLICATION_ID "com.example.t_dev_800_app")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
