--- a/app/desktop/macos/Runner/Configs/AppInfo.xcconfig
+++ b/app/desktop/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = ahouefa
+PRODUCT_NAME = t_dev_800_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = workker.ahouefa
+PRODUCT_BUNDLE_IDENTIFIER = com.example.tDev800App
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 workker. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
