--- a/app/desktop/web/manifest.json
+++ b/app/desktop/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ahouefa",
-    "short_name": "ahouefa",
+    "name": "t_dev_800_app",
+    "short_name": "t_dev_800_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
