--- a/app/desktop/pubspec.yaml
+++ b/app/desktop/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^6.0.0
   shared_preferences: ^2.2.0
   http: ^0.13.5
+  intl: ^0.18.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -90,4 +91,7 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  # see https://flutter.dev/to/font-from-package 
+
+  assets:
+    - assets/images/
