--- a/app/desktop/pubspec.yaml
+++ b/app/desktop/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   tflite_flutter: ^0.11.0
   file_picker: ^10.1.9
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
