--- a/app/desktop/pubspec.yaml
+++ b/app/desktop/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   tflite_flutter: ^0.11.0
   file_picker: ^10.1.9
   image: ^4.5.4
+  logger: ^2.5.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
